<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AkademikBilisimBasvuru</string>

    <string-array
        name="iller">
        <item>Ankara</item>
        <item>Izmir</item>
        <item>Karabük</item>
    </string-array>

    <string name="ab_baslik_txt">Akademik Bilişim 2018 Başvuru</string>
    <string name="name_et">Ad Soyad</string>
    <string name="email_et">Email</string>
    <string name="birthday">Doğum Tarihiniz</string>
    <string name="kadin">Kadın</string>
    <string name="erkek">Erkek</string>
    <string name="ab_katilim_ch" tools:ignore="StringEscaping">Akademik Bilişim'e daha önce katıldınız mı?</string>
    <string name="basvur_btn">Başvur</string>
</resources>
