<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/bg1"
    tools:context="com.ab2018.akademikbilisimbasvuru.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageView
            android:id="@+id/img1"
            android:layout_marginLeft="5dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ablogo"
            />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="3"
            android:text="@string/ab_baslik_txt"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"/>

    </LinearLayout>

    <EditText
        android:id="@+id/isimEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/name_et"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_et"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/birthday"
        android:focusable="false"

        />


    <Spinner
        android:id="@+id/sehirSpn"
        android:entries="@array/iller"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:spinnerMode="dialog"
        >

    </Spinner>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/kadin"
            android:text="@string/kadin"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="15sp"
            android:checked="true" />

        <RadioButton
            android:id="@+id/erkek"
            android:text="@string/erkek"
            android:layout_marginLeft="30dp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
    </RadioGroup>


        <CheckBox
            android:id="@+id/chkBx"
            android:text="@string/ab_katilim_ch"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        android:id="@+id/basvurBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="#FFF"
        android:onClick="onClickBtn"
        android:text="@string/basvur_btn"
        />


    </RelativeLayout>

</LinearLayout>
